--- a/src/pages/Components/CoVan/Home/Home.module.scss
+++ b/src/pages/Components/CoVan/Home/Home.module.scss
@@ -30,8 +30,8 @@
         }
         
         th {
-          background-color: #007bff;
-          color: #fff;
+          background-color: #f2f2f2;
+          color: black;
         }
         
         tr:nth-child(even) {
