--- a/src/pages/Components/SinhVien/Performance/Performance.module.scss
+++ b/src/pages/Components/SinhVien/Performance/Performance.module.scss
@@ -13,8 +13,8 @@
       }
       
       th {
-        background-color: #007bff;
-        color: #fff;
+        background-color: #f2f2f2;
+        color: black;
       }
       
       tr:nth-child(even) {
